--- a/Travel-o_Aoteroa/Base.lproj/Main.storyboard
+++ b/Travel-o_Aoteroa/Base.lproj/Main.storyboard
@@ -640,6 +640,20 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aKl-vr-cce">
+                                                    <rect key="frame" x="164" y="121" width="0.0" height="0.0"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAq-c0-yi2">
+                                                    <rect key="frame" x="214" y="121" width="0.0" height="0.0"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="IoB-zQ-2OE" firstAttribute="centerY" secondItem="9zE-Ts-Nec" secondAttribute="centerY" id="3TS-Kb-9wK"/>
@@ -662,7 +676,9 @@
                                         <connections>
                                             <outlet property="NI_desc" destination="CSP-ao-cQj" id="PPM-Yj-HLQ"/>
                                             <outlet property="NI_img" destination="IoB-zQ-2OE" id="sTd-2Q-fpx"/>
+                                            <outlet property="NI_latitude" destination="aKl-vr-cce" id="spu-QH-FE1"/>
                                             <outlet property="NI_lbl" destination="ncZ-4K-REi" id="JC5-sb-EPn"/>
+                                            <outlet property="NI_long" destination="tAq-c0-yi2" id="B19-Dl-NWZ"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -685,7 +701,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="North island" id="Cyu-hV-Ydh"/>
                     <connections>
-                        <outlet property="NI_VC" destination="c9I-zz-iFg" id="Psg-k4-xcY"/>
+                        <outlet property="NI_VC" destination="c9I-zz-iFg" id="M7A-s3-FJt"/>
                         <segue destination="xZK-cE-lWx" kind="show" identifier="NI_segue" id="vDK-jP-gBw"/>
                     </connections>
                 </viewController>
@@ -784,6 +800,20 @@
                                             <constraint firstItem="F4L-9o-MAR" firstAttribute="top" secondItem="wkx-zP-Ht0" secondAttribute="bottom" constant="3" id="wfJ-hQ-mhz"/>
                                         </constraints>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DA9-sP-TGf">
+                                        <rect key="frame" x="36" y="743" width="42" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tx6-6c-M7D">
+                                        <rect key="frame" x="86" y="743" width="42" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="M5P-qW-FEX" firstAttribute="top" secondItem="oCS-R2-BQt" secondAttribute="top" constant="10" id="HTP-Km-lP1"/>
@@ -812,7 +842,9 @@
                     <connections>
                         <outlet property="NID_desc" destination="K5a-7A-BNG" id="eJZ-pS-jVn"/>
                         <outlet property="NID_img" destination="wkx-zP-Ht0" id="haQ-Nf-CM9"/>
+                        <outlet property="NID_latitude" destination="DA9-sP-TGf" id="3hI-i7-0za"/>
                         <outlet property="NID_lbl" destination="Vt1-GN-Wgh" id="Pv7-rT-lhb"/>
+                        <outlet property="NID_long" destination="Tx6-6c-M7D" id="vgB-j8-r1l"/>
                         <outlet property="NI_mapKit" destination="iKy-XA-zu0" id="sZN-Qs-HeS"/>
                         <outlet property="starButton" destination="F4L-9o-MAR" id="D2F-oL-f5h"/>
                     </connections>
